--- a/main.html
+++ b/main.html
@@ -34,6 +34,8 @@
     <div class="item item25">25</div>
   </div>
 
+	 <div id="container"></div>
+  <script src="main.js"></script>
 <script>
 //Your code goes here 
 	const container = document.getElementById('container');
