--- a/main.html
+++ b/main.html
@@ -3,42 +3,100 @@
 <head>
   <meta charset="UTF-8">
   <title>Click and Drag</title>
-  <link rel="stylesheet" href="style.css">
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #f4f4f4;
+    }
+
+    /* Scrollable Horizontal Items (Optional Use) */
+    .items {
+      width: 100%;
+      overflow-x: auto;
+      white-space: nowrap;
+      margin-bottom: 40px;
+      border: 2px solid #333;
+      padding: 10px;
+      background: #fff;
+    }
+
+    .item {
+      display: inline-block;
+      width: 80px;
+      height: 80px;
+      background-color: #3498db;
+      color: #fff;
+      font-size: 18px;
+      text-align: center;
+      line-height: 80px;
+      margin-right: 10px;
+      border-radius: 6px;
+    }
+
+    /* Container for draggable cubes */
+    #container {
+      position: relative;
+      width: 400px;
+      height: 300px;
+      background-color: #fff;
+      border: 2px solid #ccc;
+      margin: auto;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    .cube {
+      position: absolute;
+      width: 70px;
+      height: 70px;
+      background-color: #e67e22;
+      border-radius: 6px;
+      cursor: grab;
+      transition: box-shadow 0.2s;
+    }
+
+    .cube.dragging {
+      cursor: grabbing;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+    }
+  </style>
 </head>
 <body>
+
+  <!-- Optional scrollable strip -->
   <div class="items">
-    <div class="item item1">01</div>
-    <div class="item item2">02</div>
-    <div class="item item3">03</div>
-    <div class="item item4">04</div>
-    <div class="item item5">05</div>
-    <div class="item item6">06</div>
-    <div class="item item7">07</div>
-    <div class="item item8">08</div>
-    <div class="item item9">09</div>
-    <div class="item item10">10</div>
-    <div class="item item11">11</div>
-    <div class="item item12">12</div>
-    <div class="item item13">13</div>
-    <div class="item item14">14</div>
-    <div class="item item15">15</div>
-    <div class="item item16">16</div>
-    <div class="item item17">17</div>
-    <div class="item item18">18</div>
-    <div class="item item19">19</div>
-    <div class="item item20">20</div>
-    <div class="item item21">21</div>
-    <div class="item item22">22</div>
-    <div class="item item23">23</div>
-    <div class="item item24">24</div>
-    <div class="item item25">25</div>
+    <div class="item">01</div>
+    <div class="item">02</div>
+    <div class="item">03</div>
+    <div class="item">04</div>
+    <div class="item">05</div>
+    <div class="item">06</div>
+    <div class="item">07</div>
+    <div class="item">08</div>
+    <div class="item">09</div>
+    <div class="item">10</div>
+    <div class="item">11</div>
+    <div class="item">12</div>
+    <div class="item">13</div>
+    <div class="item">14</div>
+    <div class="item">15</div>
+    <div class="item">16</div>
+    <div class="item">17</div>
+    <div class="item">18</div>
+    <div class="item">19</div>
+    <div class="item">20</div>
+    <div class="item">21</div>
+    <div class="item">22</div>
+    <div class="item">23</div>
+    <div class="item">24</div>
+    <div class="item">25</div>
   </div>
 
-	 <div id="container"></div>
-  <script src="main.js"></script>
-<script>
-//Your code goes here 
-	const container = document.getElementById('container');
+  <!-- Draggable cube container -->
+  <div id="container"></div>
+
+  <script>
+    const container = document.getElementById('container');
     const CUBE_SIZE = 70;
     const GAP = 20;
     const COLS = 4;
@@ -76,7 +134,7 @@
         let x = e.clientX - containerRect.left - offsetX;
         let y = e.clientY - containerRect.top - offsetY;
 
-        // Clamp within container
+        // Clamp within container bounds
         x = Math.max(0, Math.min(x, container.clientWidth - CUBE_SIZE));
         y = Math.max(0, Math.min(y, container.clientHeight - CUBE_SIZE));
 
@@ -91,7 +149,7 @@
         selectedCube = null;
       }
     });
-</script>
+  </script>
 
-  </body>
+</body>
 </html>
